packages/storey/tests/router_trybuild/duplicate_key_forbidden.stderr
error: Duplicate field key: 2
 --> tests/router_trybuild/duplicate_key_forbidden.rs:8:9
  |
8 |         2 -> c: Item<u64, TestEncoding>,
  |         ^

error: Duplicate field key: 2
 --> tests/router_trybuild/duplicate_key_forbidden.rs:9:9
  |
9 |         2 -> d: Item<u64, TestEncoding>,
  |         ^

warning: unused import: `mocks::encoding::TestEncoding`
 --> tests/router_trybuild/duplicate_key_forbidden.rs:1:5
  |
1 | use mocks::encoding::TestEncoding;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `Item` and `Map`
 --> tests/router_trybuild/duplicate_key_forbidden.rs:2:34
  |
2 | use storey::containers::{router, Item, Map};
  |                                  ^^^^  ^^^
